# creator-mesh

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  claude.yml
clients/creator-app/: .gitignore  next.config.mjs  package-lock.json  package.json
clients/creator-console/: DESIGN.md  README.md  TASK_SUMMARY.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
clients/creator-console/src-tauri/: Cargo.toml  tauri.conf.json
clients/creator-console/src-tauri/capabilities/: default.json
clients/creator-console/src-tauri/src/: main.rs
configs/: projects.example.yaml
docs/: architecture.md  blueprint.md  claude-code-hooks.md  context-architecture.md  context-brief.md  context-map.md  cost-control.md  design-context.md  project-goal-20260510.md  project-progress-20260510.md  project-structure.md  skill-invocation.md  testing-strategy.md  vision.md
docs/archive/: claude-first-version.md
docs/control-plane/: README.md  add-managed-project.md  auto-pr-smoke-test-2.md  auto-pr-smoke-test.md  convergence.md  plan-artifact-format.md  progress.md  vision.md  workflow-test.md
docs/use-cases/: cognitive-tree.md
examples/: thoughts-and-messages.md
scripts/dispatch/: check_run_status.sh  create_claude_task.sh  create_plan_task.sh  dispatch_plan.sh  list_plans.sh  list_runs.sh  plan_progress.sh
src/: cli.ts  decompose-cli.ts  index.ts  runtime-cli.ts
src/agents/: DESIGN.md  (+12 more)
templates/: CONTEXT_BRIEF_TEMPLATE.md  DESIGN_TEMPLATE.md
tests/: README.md
(+264 files in other folders)
