[package]
name = "creator-console"
version = "0.1.0"
description = "CreatorMesh Console — macOS Desktop Shell"
authors = ["CreatorMesh"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "creator_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "creator-console"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
